# coclasstest

./: Cargo.toml  cargo_expand_one_field_correct.txt  cargo_expand_two_field_issue.txt
src/: main.rs
