[package]
name = "coclasstest"
version = "0.1.0"
authors = ["zxey <zxey@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#com = "0.1"
com = { git = "https://github.com/microsoft/com-rs.git" }
winapi = { version = "0.3", features = ["winerror"]}